# sdk-example-check

./: README.md  pyproject.toml
.github/workflows/: ci.yml
examples/: sample.txt
src/sdk_example_check/: __init__.py  __main__.py  cli.py  core.py  rules.py
tests/: test_sdk_example_check.py
